css fixed to align text box and save button

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -11,6 +11,8 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  width: 100%;
+  margin-top: -16px;
 }
 
 .jumbotron {
@@ -63,9 +65,20 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  margin-left: -89px;
+  
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+img {
+  height: 34px;
+  width:28px;
+}
+
+.leftDiv {
+  padding: 0;
 }
